--- a/index.css
+++ b/index.css
@@ -21,6 +21,38 @@ width:350px;
 .this-font-size{
     font-size: 20px;
 }
+
+.text-celadon{
+  color:#ACE1AF;
+}
+.text-design{
+   color: darkgrey;
+  white-space: nowrap;
+  font-size: 3em;
+  font-family: sans-serif;
+  letter-spacing: 0.1em;
+  transition: 0.3s;
+  text-shadow: 1px 1px 0 grey, 1px 2px 0 grey, 1px 3px 0 grey, 1px 4px 0 grey,
+    1px 5px 0 grey, 1px 6px 0 grey, 1px 7px 0 grey, 1px 8px 0 grey,
+    5px 13px 15px black;
+}
+
+.text-design:hover {
+  transition: 0.3s;
+  text-shadow: 1px -1px 0 grey, 1px -2px 0 grey, 1px -3px 0 grey,
+    1px -4px 0 grey, 1px -5px 0 grey, 1px -6px 0 grey, 1px -7px 0 grey,
+    1px -8px 0 grey, 5px -13px 15px black, 5px -13px 25px #808080;
+}
+
+
+.text-dwhite{
+  color: #e8e4c9;
+}
+
+h2{
+  font-weight: 800;
+}
+
 a:visited {
     color: white;
   }
@@ -28,4 +60,7 @@ a:visited {
   a:hover {
     color:yellow;
     text-decoration: none;
+  }
+  a{
+    color:white;
   }
